# SIGMA

./: .gitignore  README.md  build_memory_tree.py  evaluate_sigma.py  generate_hotpotqa_reflections.py  generate_memo_reflections.py  generate_reflections.py  process_musique.py  process_narrativeqa.py  pyproject.toml  requirements.txt  run_consolidation.py  train_bootstrap.py
baselines/: README.md  __init__.py  _common.py
baselines/bm25/: __init__.py  bm25_utils.py  run_bm25_baseline.py
baselines/icl/: __init__.py  run_icl_baseline.py
data/: hotpotqa_prompts.jsonl  hotpotqa_reflections.jsonl
data/MuSiQue/: README.md
scripts/: bootstrap_adapters.sh  build_memory_tree.sh  evaluate_sigma.sh  generate_memo_reflections.sh  generate_reflections.sh  process_musique.sh  process_narrativeqa.sh  run_consolidation.sh
src/sigma/: __init__.py  build_memory_tree.py  evaluate_sigma.py  hotpotqa_reflections.py  memo_reflections.py  reflection_dataset.py  reflection_hf_client.py  reflection_llm.py  reflection_pipeline.py  reflection_prompts.py  reflections.py  run_consolidation.py  train_bootstrap.py
src/sigma/adapters/: __init__.py  shared_lora.py
src/sigma/backends/: __init__.py  hf_backend.py  openai_backend.py
src/sigma/consolidate/: __init__.py  generator.py  pca.py
src/sigma/data_process/: __init__.py  process_musique.py  process_narrativeqa.py
src/sigma/data_sources/: __init__.py  base.py  chunking.py  hotpotqa.py  musique.py  narrativeqa.py  process_musique.py  process_narrativeqa.py
src/sigma/memo_pipeline/: __init__.py  llm.py  pipeline.py  prompts.py
src/sigma/memory/: __init__.py  apply.py  entry.py  gw.py  signature.py  single_entry.py  tree.py
src/sigma/reflection/: __init__.py  dataset.py  hf_client.py  hotpotqa_legacy.py  (+3 more)
(+5 files in other folders)
